--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .idea/
 __pycache__/
-Virtual-Env-Image-Operations/
 1. Basics/10. Working with Images/Images
-PDF_Virtual_Environment/
 PDF/
+Environments/
