--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ __pycache__/
 1. Basics/10. Working with Images/Images
 PDF/
 Environments/
+3. GUI apps using Python/
+Projects/2. Basic GUI (Tkinter)/
